--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "umi-types": "^0.3.0"
   },
   "lint-staged": {
-    "*.{ts,tsx}": [
+    "src/*.{ts,tsx}": [
       "tslint --fix",
       "git add"
     ],
-    "*.{js,jsx}": [
+    "src/*.{js,jsx}": [
       "eslint --fix",
       "git add"
     ]
