--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
-    "antd": "^3.19.5",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "koa": "^2.11.0",
+    "koa-router": "^7.4.0",
+    "koa-send": "^5.0.0"
   },
   "devDependencies": {
     "@types/echarts": "^4.4.1",
@@ -19,6 +19,7 @@
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/react-test-renderer": "^16.0.3",
+    "antd": "^3.25.2",
     "babel-eslint": "^9.0.0",
     "echarts": "^4.5.0",
     "eslint": "^5.4.0",
@@ -29,6 +30,8 @@
     "eslint-plugin-react": "^7.11.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-test-renderer": "^16.7.0",
     "tslint": "^5.12.0",
     "tslint-eslint-rules": "^5.4.0",
