更改配置项

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,4 +8,4 @@ services:
     - "3000:3000"
     volumes:
     - ../:/src
-    entrypoint: bash -c "node bit-animation.js"
+    entrypoint: bash -c "npm install -production && node bit-animation.js"
